# auserial

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: good_way_to_use.py  list_ports.py  minimal.py  read_exactly.py  read_until.py  timeout.py
src/auserial/: __init__.py  _list_ports.py  auserial.py
tests/: conftest.py  test_auserial.py  test_list_ports.py
