[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auserial"
version = "0.1.0"
description = "Truly async serial port for Linux/macOS using epoll/kqueue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Monnom Olivier", email = "olivier.monnom@gmail.com" }]
keywords = ["serial", "asyncio", "async", "tty", "epoll", "kqueue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals :: Serial",
]

[project.urls]
Repository = "https://github.com/papyDoctor/auserial"
Issues = "https://github.com/papyDoctor/auserial/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auserial"]

[tool.pyright]
include = ["src", "examples"]
extraPaths = ["src"]
