[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auserial"
version = "0.4.2"
description = "Truly async serial port for Linux/macOS using epoll/kqueue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Monnom Olivier", email = "olivier.monnom@gmail.com" }]
maintainers = [{ name = "Louis Travaux", email = "louis.trvx@gmail.com" }]
keywords = ["serial", "asyncio", "async", "tty", "epoll", "kqueue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals :: Serial",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Repository = "https://github.com/papyDoctor/auserial"
Issues = "https://github.com/papyDoctor/auserial/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auserial"]

[tool.pyright]
include = ["src", "examples", "tests"]
extraPaths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
